# etl_duckdb_airflow

./: exemplo_00.py  pyproject.toml
dags/: main.py  minha_primeira_dag.py  minha_segunda_dag.py
frontend/: exemplo_02.py
